@@ -1,5 +1,12 @@
 2007-06-13  Hector E. Gomez Morales <hectoregm@gmail.com> 
 
+	* MonodocEditor/EditorWindow.cs,
+	  MonodocEditor/gtk-gui/Monodoc.Editor.EditorWindow.cs,
+	  MonodocEditor/gtk-gui/gui.stetic, EcmaUtils/EcmaReader.cs: Working
+	  with the TextView widget.
+
+2007-06-13  Hector E. Gomez Morales <hectoregm@gmail.com> 
+
 	* MonodocEditor/EditorWindow.cs, MonodocEditor/MonodocEditor.mdp: Minor
 	  changes using EcmaUtils.
 	* EcmaUtils/MyClass.cs, EcmaUtils/EcmaUtils.mdp,
